--- a/public/waitingroom.html
+++ b/public/waitingroom.html
@@ -2,46 +2,65 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waiting Room</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Homepage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="container waiting_room">
-        <div class="card-waiting bg-card-4">
-            <div class="content-waiting">
-                <div class="list-player">
-                    <h2>Players : </h2>
-                    <div id="players-list"></div>
-                </div>
-                <div class="action-section">
-                    <div class="roomcode">
-                        <h4>Room Code : </h4>
-                        <h2 id="room-code-display">Loading...</h2>
-                    </div>
-                    <div class="start-game">
-                        <button onclick="startGame()" class="btn-open"><i class="ph ph-play"></i> Start The
-                            Game</button>
-                    </div>
-                    <div class="random-mode">
-                        <span class="random-mode-label">Random Mode <i class="ph ph-info"></i></span>
-                        <div class="button-switch">
-                            <label class="switch">
-                                <input type="checkbox">
-                                <span class="slider round"></span>
-                            </label>
+<body class="waitingroom">
+    <main class="container">
+        <section>
+            <h1 style="font-size: 45px;" class="mt-5">NEGARA KONOHA</h1>
+            <h5 class="mt-5 text-white mb-3">Players : </h5>
+            <div class="row" id="players-list"></div>
+        </section>
+    </main>
+
+    <div class="fixed-bottom pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-2">
+                    <span class="text-white d-block">Room Code : </span>
+                    <h2 id="room-code-display" style="font-size: 45px !important;" class="d-inline-block">
+                        Loading...</h2>
+                    <button type="button" class="custom-button btn d-inline-block text-white float-end"
+                        id="copyToastBTN">
+                        <i class="ph ph-copy" style="font-size: 45px;"></i>
+                    </button>
+                    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                        <div id="copyToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                            <div class="toast-header">
+                                <strong class="me-auto">Copy To Clipboard</strong>
+                                <button type="button" class="btn-close" data-bs-dismiss="toast"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="toast-body">
+                                Success Copy Room Code To Clip Board.
+                            </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="col-sm-3 pt-3 offset-sm-2">
+                    <button type="button" class="btn btn-light w-100 btn-play-high" id="startGameNow">
+                        <i class="ph ph-play"></i> Start The Game
+                    </button>
+                    <h3 class="text-white text-center" id="playerCount" style="font-size: 50px;"></h3>
+                </div>
+
+                <div class="col-sm-3 pt-3 offset-sm-2">
+                    <span class="text-white">Global Room</span>
                 </div>
             </div>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
+    <script type="text/javascript">
         const socket = io();
 
         // Get username and room code from URL query parameters or localStorage
@@ -60,6 +79,11 @@
         // Display room code
         document.getElementById('room-code-display').textContent = roomCode;
 
+        // Hide the "Start The Game" button initially
+        const startGameButton = document.getElementById('startGameNow');
+        const playerCountDisplay = document.getElementById('playerCount'); // Get the player count display element
+        startGameButton.style.display = 'none';
+
         // Join the room
         socket.emit('joinRoom', { username, roomCode });
 
@@ -67,19 +91,42 @@
         socket.on('playersListUpdate', (players) => {
             const playersList = document.getElementById('players-list');
             playersList.innerHTML = '';  // Clear the current list
+
             players.forEach(player => {
                 const playerDiv = document.createElement('div');
-                playerDiv.classList.add('label-name');
-                playerDiv.textContent = player;
+                playerDiv.classList.add('col-sm-3', 'custom-card', 'rounded-3', 'bg-white', 'p-3', 'mx-1');
+                playerDiv.textContent = player === username ? player + ' (You)' : player;
                 playersList.appendChild(playerDiv);
             });
+
+            // Update the player count
+            playerCountDisplay.textContent = `${players.length} / 9`;
+
+            // Show or hide the "Start The Game" button based on the number of players
+            if (players.length === 9) {
+                startGameButton.style.display = 'block';
+            } else {
+                startGameButton.style.display = 'none';
+            }
         });
 
         function startGame() {
             // Placeholder function for starting the game
             alert('Starting the game!');
         }
+
+        const toastTrigger = document.getElementById('copyToastBTN');
+        const toastLiveExample = document.getElementById('copyToast');
+
+        if (toastTrigger) {
+            const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastLiveExample);
+            toastTrigger.addEventListener('click', () => {
+                navigator.clipboard.writeText(roomCode);
+                toastBootstrap.show();
+            });
+        }
     </script>
+
 </body>
 
 </html>
