add functional start game

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Modal Enter Code -->
         <section class="modalAddCode hidden">
             <div class="header-modal">
-              <h2 class="title-addCode">Masukkan Kode & <span>Bermain Bersama Teman Muu</span></h2>
+              <h2 class="title-addCode">Masukkan Kode & <span>Bermain Bersama Teman Mu</span></h2>
               <button class="btn-closeAddCode">⨉</button>
             </div>
             <div class="body-modal">
@@ -45,6 +45,7 @@
 
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <script src="./modal.js"></script>
+    <script src="modal.js"></script>
+    <script src="api.js"></script>
 </body>
 </html>
